--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9858,6 +9858,103 @@ body {
   color: #ffffff;
 }
 
+.border-curved {
+  border-radius: 50px;
+}
+
+.portfolio-grid figure {
+  position: relative;
+  float: left;
+  overflow: hidden;
+  width: 100%;
+  background: black;
+  text-align: center;
+  cursor: pointer;
+}
+
+@media (max-width: 767px) {
+  .portfolio-grid figure {
+    width: 270px;
+  }
+}
+
+.portfolio-grid figure img {
+  position: relative;
+  display: block;
+  min-height: 100%;
+  max-width: 100%;
+  width: 100%;
+  opacity: 0.8;
+}
+
+.portfolio-grid figure figcaption {
+  padding: 2em;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.portfolio-grid figure figcaption:before, .portfolio-grid figure figcaption:after {
+  pointer-events: none;
+}
+
+.portfolio-grid figure.effect-text-in {
+  border-radius: 50px;
+}
+
+.portfolio-grid figure.effect-text-in img,
+.portfolio-grid figure.effect-text-in h4 {
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+}
+
+.portfolio-grid figure.effect-text-in img {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.portfolio-grid figure.effect-text-in h4,
+.portfolio-grid figure.effect-text-in p {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  padding: 10px;
+  margin-bottom: 0;
+  width: 100%;
+}
+
+.portfolio-grid figure.effect-text-in p {
+  text-transform: none;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0, 50px, 0);
+  transform: translate3d(0, 50px, 0);
+}
+
+.portfolio-grid figure.effect-text-in:hover img {
+  -webkit-transform: translate3d(0, -150px, 0);
+  transform: translate3d(0, -120px, 0);
+}
+
+.portfolio-grid figure.effect-text-in:hover h4 {
+  -webkit-transform: translate3d(0, -130px, 0);
+  transform: translate3d(0, -130px, 0);
+}
+
+.portfolio-grid figure.effect-text-in:hover p {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
 .hotel-carousel {
   position: relative;
   margin-bottom: 250px;
@@ -9922,11 +10019,15 @@ body {
   padding-left: 20px;
 }
 
+.content-wrapper .cover-wrapper .cover-details .facilities-wrapper {
+  margin: 0px 80px;
+}
+
 .content-wrapper .cover-wrapper .cover-details .facilities-wrapper .facilities-desc {
   background-color: rgba(0, 0, 0, 0.25);
-  padding: 50px 80px;
+  padding: 50px 60px;
+  margin-right: 20px;
   border-radius: 50px;
-  margin: 0px 80px;
   text-align: center;
 }
 
@@ -9962,15 +10063,6 @@ body {
 
 .footer .mdi {
   font-size: 20px;
-}
-
-.card {
-  background-color: inherit;
-  border: 0;
-}
-
-.card .card-body {
-  padding: 0;
 }
 
 .text-italian {
