--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -54,11 +54,12 @@
                 }
             }
             .facilities-wrapper {
+                margin: 0px 80px;
                 .facilities-desc {
                   background-color:  rgba(0,0,0, 0.25);
-                  padding: 50px 80px;
+                  padding: 50px 60px;
+                  margin-right: 20px;
                   border-radius: 50px;
-                  margin: 0px 80px;
                   text-align: center;
                   .item {
                     margin-bottom: 30px;
@@ -92,16 +93,6 @@
         font-size: 20px;
     }
 }
-
-
-.card {
-    background-color: inherit;
-    border: 0;
-    .card-body {
-        padding: 0;
-    }
-}
-
 
 .text-italian {
     font-family: $type2;
