--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -3,6 +3,10 @@
   font-weight: bold;
   color: #ffffff;
   border-radius: 8px;
+  @media ( max-width: 400px ) {
+    padding: 5px;
+    font-size: 10px;
+}
   &:hover {
     background-color: #ffffff;
     color: #000000;
