--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -4,9 +4,11 @@
     .introduction {
       position: absolute;
       padding: 2rem;
+      @media ( max-width: 400px ) {
+        padding: 1rem;
+      }
       background-color: rgba(17,66,25,0.5);
       width: 50%;
-      top: 0;
       z-index: 1000;
       left:50%;
       top:50%;
@@ -16,14 +18,20 @@
 
 .content-wrapper {
     .cover-wrapper {
-        position: relative;
         margin-bottom: 80px;
         .cover-image {
+            position: relative;
             margin-bottom: 80px;
+            @media ( max-width: 768px ) {
+                margin-bottom: 40px;
+            }
             .cover-text {
+                display: flex;
+                align-items: flex-end;
                 position: absolute;
                 background-color: #235579;
-                padding: 250px 70px 20px 70px;
+                height: 50%;
+                padding: 20px;
                 border-radius: 0px 0px 30px 30px;
                 left: 5%;
                 top: 0;
@@ -35,17 +43,27 @@
                 padding: 50px 80px;
                 border-radius: 50px;
                 margin: 0px 80px;
+                @media ( max-width: 768px ) {
+                    padding: 20px;
+                    margin: 0px 20px;
+                    border-radius: 0px;
+                }
+                
                 .item {
-                    margin-bottom: 60px;
+                    margin-bottom: 30px;
                 }
                 .mdi {
                     font-size: 30px;
+                    @media ( max-width: 768px ) {
+                        font-size: 20px;
+                    }
                 }
             }
             .room-description {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+                margin-top: 20px;
                 p {
                     font-size: 16px;
                 }
@@ -55,22 +73,34 @@
             }
             .facilities-wrapper {
                 margin: 0px 80px;
+                @media ( max-width: 768px ) {
+                    margin: 0px 20px;
+                }
                 .facilities-desc {
                   background-color:  rgba(0,0,0, 0.25);
                   padding: 50px 60px;
                   margin-right: 20px;
                   border-radius: 50px;
                   text-align: center;
+                  @media ( max-width: 768px ) {
+                    padding: 20px
+                  }
                   .item {
                     margin-bottom: 30px;
                   }
                   img {
                     width: 140px;
+                    @media ( max-width: 768px ) {
+                        width: 70px;
+                      }
                   }
                 }
             }
             .explore-wrapper {
                 margin: 0px 80px;
+                @media ( max-width: 768px ) {
+                    margin: 0px 10px;
+                }
                 .item {
                     margin-bottom: 100px;
                 }
@@ -86,6 +116,9 @@
 .footer {
     border-top: 1px solid #ffffff;
     padding: 30px 100px;
+    @media ( max-width: 768px ) {
+        padding: 30px;
+    }
     p {
         font-size: 20px;
     }
