--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -92,3 +92,14 @@ body {
 		}
 	}
 }
+
+
+.logo-title {
+    font-size: 10px;
+    @media ( min-width: 765px ) {
+        font-size: 20px
+    }
+    @media ( min-width: 992px ) {
+        font-size: 30px
+    }
+}
