--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -25,30 +25,51 @@ p {
   font-size: 18px;
   margin-bottom: 0.5rem;
   line-height: 1.8;
+  @media ( max-width: 400px ) {
+    font-size: 14px;
+  }
 }
 h1,
 .h1 {
   font-size: 60px;
+  @media ( max-width: 400px ) {
+    font-size: 20px;
+  }
 }
 h2,
 .h2 {
   font-size: 45px;
+  @media ( max-width: 400px ) {
+    font-size: 18px;
+  }
 }
 h3,
 .h3 {
   font-size: 30px;
+  @media ( max-width: 400px ) {
+    font-size: 16px;
+  }
 }
 h4,
 .h4 {
   font-size: 25px;
+  @media ( max-width: 400px ) {
+    font-size: 15px;
+  }
 }
 h5,
 .h5 {
   font-size: 20px;
+  @media ( max-width: 400px ) {
+    font-size: 14px;
+  }
 }
 h6,
 .h6 {
   font-size: 16px;
+  @media ( max-width: 400px ) {
+    font-size: 12px;
+  }
 }
 .display-1 {
   font-size: 3.5rem;
