--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10022,23 +10022,37 @@ body {
 
 .hotel-carousel {
   position: relative;
-  margin-bottom: 250px;
 }
 
 .hotel-carousel .introduction {
-  position: absolute;
   padding: 2rem;
   background-color: rgba(17, 66, 25, 0.5);
-  width: 50%;
   z-index: 1000;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, 130%);
+  width: 90%;
+  margin: 80px auto;
 }
 
 @media (max-width: 400px) {
   .hotel-carousel .introduction {
+    margin: 40px auto;
     padding: 1rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .hotel-carousel .introduction {
+    margin: 0;
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, 130%);
+  }
+}
+
+@media (min-width: 1400px) {
+  .hotel-carousel {
+    margin-bottom: 250px;
   }
 }
 
