--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -1,18 +1,26 @@
 .hotel-carousel {
     position: relative;
-    margin-bottom: 250px;
     .introduction {
-      position: absolute;
       padding: 2rem;
+      background-color: rgba(17,66,25,0.5);
+      z-index: 1000; 
+      width: 90%;
+      margin: 80px auto;
       @media ( max-width: 400px ) {
+        margin: 40px auto;
         padding: 1rem;
       }
-      background-color: rgba(17,66,25,0.5);
-      width: 50%;
-      z-index: 1000;
-      left:50%;
-      top:50%;
-      transform: translate(-50%, 130%);
+      @media ( min-width: 1400px ) {
+        margin: 0;
+        width: 50%;
+        position: absolute;
+        left:50%;
+        top:50%;
+        transform: translate(-50%, 130%);
+      }
+    }
+    @media ( min-width: 1400px ) {
+        margin-bottom: 250px;
     }
 }
 
