--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -10,16 +10,19 @@
         margin: 40px auto;
         padding: 1rem;
       }
-      @media ( min-width: 1400px ) {
+      @media ( min-width: 1200px ) {
         margin: 0;
         width: 50%;
         position: absolute;
         left:50%;
-        top:50%;
+        top: 56%;
         transform: translate(-50%, 130%);
       }
+      @media ( mIN-width: 1400px ) {
+        top: 61%;
+      }
     }
-    @media ( min-width: 1400px ) {
+    @media ( min-width: 1200px ) {
         margin-bottom: 250px;
     }
 }
