--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -80,8 +80,8 @@ $border-color: #f3f3f3;
 
 ////////// FONTS//
 
-$type1:     'Montserrat', sans-serif;
-$type2:     'Italianno', sans-serif;
+$type1:     'Nunito', sans-serif;
+$type2:     'Great Vibes', cursive;
 
 $default-font-size: 1rem; // 16px as base font size
 
