--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,44 +1,44 @@
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat/Montserrat-Light.eot');
-  src: url('../fonts/Montserrat/Montserrat-Light.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Montserrat/Montserrat-Light.ttf') format('truetype');
+  font-family: 'Nunito';
+  src: url('../fonts/Nunito/Nunito-Light.eot');
+  src: url('../fonts/Nunito/Nunito-Light.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/Nunito/Nunito-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
   
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat/Montserrat-Bold.eot');
-  src: url('../fonts/Montserrat/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype');
+  font-family: 'Nunito';
+  src: url('../fonts/Nunito/Nunito-Bold.eot');
+  src: url('../fonts/Nunito/Nunito-Bold.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/Nunito/Nunito-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat/Montserrat-Medium.eot');
-  src: url('../fonts/Montserrat/Montserrat-Medium.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
+  font-family: 'Nunito';
+  src: url('../fonts/Nunito/Nunito-Medium.eot');
+  src: url('../fonts/Nunito/Nunito-Medium.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/Nunito/Nunito-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat/Montserrat-Regular.eot');
-  src: url('../fonts/Montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
+  font-family: 'Nunito';
+  src: url('../fonts/Nunito/Nunito-Regular.eot');
+  src: url('../fonts/Nunito/Nunito-Regular.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/Nunito/Nunito-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat/Montserrat-Black.eot');
-  src: url('../fonts/Montserrat/Montserrat-Black.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Montserrat/Montserrat-Black.ttf') format('truetype');
+  font-family: 'Nunito';
+  src: url('../fonts/Nunito/Nunito-Black.eot');
+  src: url('../fonts/Nunito/Nunito-Black.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/Nunito/Nunito-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
 }
