--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -100,6 +100,9 @@ body {
         font-size: 20px
     }
     @media ( min-width: 992px ) {
+        font-size: 20px
+	}
+	@media ( min-width: 1200px ) {
         font-size: 30px
     }
 }
