--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -136,6 +136,11 @@
     .mdi {
         font-size: 20px;
     }
+    .social-media-cons {
+        img {
+            width: 35px;
+        }
+    }
 }
 
 .text-italian {
