--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Nunito';
   src: url('../fonts/Nunito/Nunito-Light.eot');
-  src: url('../fonts/Nunito/Nunito-Light.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Nunito/Nunito-Light.ttf') format('truetype');
+  src: url('../fonts/Nunito/Nunito-Light.eot?#iefix') format('embedded-opentype');
+  src: url('../fonts/Nunito/Nunito-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
@@ -10,26 +10,17 @@
 @font-face {
   font-family: 'Nunito';
   src: url('../fonts/Nunito/Nunito-Bold.eot');
-  src: url('../fonts/Nunito/Nunito-Bold.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Nunito/Nunito-Bold.ttf') format('truetype');
+  src: url('../fonts/Nunito/Nunito-Bold.eot?#iefix') format('embedded-opentype');
+  src: url('../fonts/Nunito/Nunito-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Nunito';
-  src: url('../fonts/Nunito/Nunito-Medium.eot');
-  src: url('../fonts/Nunito/Nunito-Medium.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Nunito/Nunito-Medium.ttf') format('truetype');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Nunito';
   src: url('../fonts/Nunito/Nunito-Regular.eot');
-  src: url('../fonts/Nunito/Nunito-Regular.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Nunito/Nunito-Regular.ttf') format('truetype');
+  src: url('../fonts/Nunito/Nunito-Regular.eot?#iefix') format('embedded-opentype');
+  src: url('../fonts/Nunito/Nunito-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -37,9 +28,17 @@
 @font-face {
   font-family: 'Nunito';
   src: url('../fonts/Nunito/Nunito-Black.eot');
-  src: url('../fonts/Nunito/Nunito-Black.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Nunito/Nunito-Black.ttf') format('truetype');
+  src: url('../fonts/Nunito/Nunito-Black.eot?#iefix') format('embedded-opentype');
+  src: url('../fonts/Nunito/Nunito-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Great Vibes';
+  src: url('../fonts/Great_Vibes/GreatVibes-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+  
   
