--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -41,3 +41,16 @@
     }
   }
 }
+
+.logo-title {
+  font-size: 10px;
+  @media ( min-width: 765px ) {
+      font-size: 20px
+  }
+  @media ( min-width: 992px ) {
+      font-size: 20px
+}
+@media ( min-width: 1200px ) {
+      font-size: 30px
+  }
+}
