--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -2,7 +2,7 @@
   background-color: rgba(238, 84, 53, 0.8);
   width: 100%;
   padding: 0px 10px;
-  position: absolute;
+  position: fixed;
   z-index: 2;
   .navbar-toggler-icon {
     color: #ffffff;
