--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -63,7 +63,7 @@ $border-color: #f3f3f3;
 ////////// FONTS//
 
 $type1:     'Nunito', sans-serif;
-$type2:     'Great Vibes', cursive;
+$type2:     'Great Vibes', regular;
 
 $default-font-size: 1rem; // 16px as base font size
 
